[tool.poetry]
name = "t-sne"
version = "0.1.0"
description = ""
authors = ["Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
scipy = "^1.5.4"
scikit-learn = "^0.22.1"
matplotlib = "^3.1.2"
torch = "^1.3.1"
tqdm = "^4.41.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^1.2.4"
jupytext = "^1.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
